--- a/style.css
+++ b/style.css
@@ -1,35 +1,46 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
+.profile {
+    position: relative;
+    display: inline-block;
+    margin: 10px;
   }
   
-  #container {
-    background-color: rgba(255, 255, 255, 0.85);
+  .profile img {
+    width: 200px;
+    height: 200px;
+    cursor: pointer;
+  }
+  
+  .overlay {
     position: absolute;
-    top: 15%;
-    left: 15%;
-    min-width: 1100px;
-    min-height: 1050px;
-    border-radius: 0.7em;
-  }
-  
-  header {
-    height: 50px;
-    background-color: rgba(231, 229, 229, 0.5);
-    font-size: 2.75em;
-    padding: 0.5em;
-    color: rgb(216, 150, 7);
-  }
-  
-  header span {
-    font-family: 'Sacramento', cursive;
-  }
-  
-  footer {
-    position: absolute;
-    bottom: 0;
-    height: 50px;
+    top: 0;
+    left: 0;
     width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .profile:hover .overlay {
+    opacity: 1;
+  }
+  
+  .content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
     text-align: center;
-    font-size: 0.85em;
+  }
+  
+  button {
+    margin-top: 10px;
+    padding: 5px 10px;
+    border: none;
+    background-color: #333;
+    color: white;
+    cursor: pointer;
   }
   
